Replace unmodifiableList usages with new utilities